2009-12-03 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.c: fixed memory leak.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for hint.

2009-11-24 Alejandro Guerrieri <aguerrieri at kannel.org>
    * contrib/kannel-monitor/*: rewrite of the code to support separate dlr
      counters. Interface cleanup and php code updates.

2009-11-23 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_pgsql.c: applied patch that escapes table name and fields.
      Quoting an identifier also makes it case-sensitive, whereas unquoted names are
      always folded to lower case. CB.
      See http://www.postgresql.org/docs/8.0/static/sql-syntax.html#SQL-SYNTAX-IDENTIFIERS
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-11-15 Alexander Malysh <amalysh at kannel.org>
    * gw/wap_push_ppg.c: allow requesting DLRs without dlr-url.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2009-11-15 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: applied patch that minimize possibility of wrong re-assembling of
      concatenated MO messages.

2009-11-11 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/bearerbox.c, gw/smscconn.[ch], gw/smscconn_p.h: applied patch
      that adds separate dlr counters on the status page.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> fir this patch.

2009-11-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: fixed crashes on Snow Leopard 64Bit.
      Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for this patch

2009-11-01 Alexander Malysh <amalysh at kannel.org>
    * gw/numhash.c, gw/bb_smscconn.c: fixed possible crash by reloading
      white/blask lists via HTTP interface.

2009-10-22 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mssql.c, gw/dlr_mysql.c, gw/dlr_oracle.c, gw/dlr_pgsql.c, gw/dlr_sdb.c:
      added warnings if DLR was not inserted/updated/deleted but no error occurs